@@ -38,7 +38,7 @@
                 <value>230</value>
             </setting>
             <setting name="BlacklistedProcesses" serializeAs="String">
-                <value>devenv,explorer,notepad,word,excel,outlook</value>
+                <value>devenv, Explorer, Notepad, Word, Excel, Outlook</value>
             </setting>
             <setting name="TopMostHighlighter" serializeAs="String">
                 <value>False</value>
